Add image slideshow

--- a/style.css
+++ b/style.css
@@ -49,8 +49,18 @@
   font-style: normal;
 }
 
+.anta-regular {
+  font-family: "Anta", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   background-color: #030303;
+  color: white;
+}
+a {
+  text-decoration: none;
   color: white;
 }
 
@@ -81,6 +91,25 @@ nav {
   display: flex;
   justify-content: space-evenly;
   position: relative;
+}
+
+.under-line {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.under-line::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 3px;
+  background: white;
+  transition: width 0.3s;
+}
+
+.under-line:hover::after {
+  width: 100%;
+  cursor: pointer;
 }
 
 /* END OF NAVBAR  */
@@ -155,12 +184,126 @@ nav {
   font-size: 25px;
   color: grey;
   scale: 1;
-  /* //transform: scale(1.5); */
   transition: transform 1500ms;
 }
 
-/* .arrow-icon:hover {
-  transform: translateY(20px);
-} */
-
 /* END OF HERO  */
+
+/* IMAGE SLIDESHOW  */
+
+#product {
+  position: relative;
+  width: 800px;
+  height: 500px;
+  margin: 150px auto;
+  perspective: 1400px;
+  transform-style: preserve-3d;
+  /* background-color: red; */
+}
+#product h2 {
+  position: relative;
+  top: -150px;
+  text-align: center;
+}
+
+#product label,
+#product label img {
+  position: absolute;
+  width: 600px;
+  height: 350px;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  font-size: 70px;
+  justify-content: center;
+  transition: transform 500ms ease;
+}
+
+#product img {
+  border: 5px solid #fff;
+  object-fit: cover;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.card-img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-body {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: -100%;
+  background: #3c3b524e;
+  backdrop-filter: blur(7px);
+  border: 5px solid white;
+  padding: 20px;
+  transition: 2s;
+}
+
+.card-title {
+  margin-top: 30px;
+  font-size: 30px;
+  font-family: stellar;
+}
+
+.card-text {
+  font-size: 15px;
+  color: #bbbbbb;
+  font-family: "Fredoka", sans-serif;
+  line-height: 20px;
+}
+
+#s1:checked ~ #slider1,
+#s2:checked ~ #slider2,
+#s3:checked ~ #slider3 {
+  box-shadow: 0px 13px 26px rgba(235, 228, 228, 0.119),
+    0 1px 6px rgba(161, 142, 142, 0.2);
+  transform: translate3d(0%, 0, 0px);
+  .card:hover .card-body {
+    right: 0;
+  }
+}
+
+#s1:checked ~ #slider2,
+#s2:checked ~ #slider3,
+#s3:checked ~ #slider1 {
+  transform: translate3d(20%, 0, -100px);
+  box-shadow: 0px 13px 26px rgba(235, 228, 228, 0.119),
+    0 1px 6px rgba(161, 142, 142, 0.2);
+  .card:hover {
+    cursor: pointer;
+  }
+}
+
+#s1:checked ~ #slider3,
+#s2:checked ~ #slider1,
+#s3:checked ~ #slider2 {
+  transform: translate3d(40%, 0, -250px);
+  box-shadow: 0px 13px 26px rgba(235, 228, 228, 0.119),
+    0 1px 6px rgba(161, 142, 142, 0.2);
+  .card:hover {
+    cursor: pointer;
+  }
+}
+
+input[type="radio"] {
+  position: relative;
+  top: 100%;
+  left: 50%;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+  opacity: 0;
+}
+
+/* END OF IMAGE SLIDESHOW  */
