--- a/style.css
+++ b/style.css
@@ -296,9 +296,16 @@ button:hover {
   box-shadow: 0px 13px 26px rgba(235, 228, 228, 0.119),
     0 1px 6px rgba(161, 142, 142, 0.2);
   transform: translate3d(0%, 0, 0px);
-  .card:hover .card-body {
-    right: 0;
+  .card {
+    cursor: pointer;
   }
+  /* .card:hover .c6ard-body {
+    right: 0;
+  } */
+
+  /* .card:active .card-body {
+    right: 0;
+  } */
 }
 
 #s1:checked ~ #slider2,
